--- a/Webtech/AS3/publicasions.html
+++ b/Webtech/AS3/publicasions.html
@@ -19,33 +19,35 @@
             </a>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="./index.html" class="nav-link px-3 link-dark">About</a></li>
-                <li><a href="./publicasions.html" class="active nav-link px-3 link-dark">Research</a></li>
+                <li><a href="./publicasions.html" class="active nav-link px-3 link-dark">Publications</a></li>
                 <li><a href="./teaching.html" class="nav-link px-3 link-dark">Teaching</a></li>
                 <li><a href="./member.html" class="nav-link px-3 link-dark">People</a></li>
                 <li><a href="./hobby.html" class="nav-link px-3 link-dark">When I'm not doing research</a></li>
             </ul>
         </header>
     </div>
-    <div id="sidenav" class="fixlayout col-2">
-        <div class="sectionA1">
-            <div class="pro-info">
-                <img src="./assets/p_photo.jpg">
-                <div>Morris Tang</div>
+    <div class="row container">
+        <div id="sidenav" class="fixlayout col-2">
+            <div class="sectionA1">
+                <div class="pro-info">
+                    <img src="./assets/p_photo.jpg">
+                    <div>Morris Tang</div>
+                </div>
+            </div>
+            <div class="quick-nav sectionA2">
+                <ul>
+                    <li><a href="#">International Journal</a></li>
+                    <li><a href="#">Domestic Journal</a></li>
+                    <li><a href="#">Book Chapter</a></li>
+                    <li><a href="#">Conference</a></li>
+                    <li><a href="#">MOST</a></li>
+                </ul>
             </div>
         </div>
-        <div class="quick-nav sectionA2">
-            <ul>
-                <li><a href="#">International Journal</a></li>
-                <li><a href="#">Domestic Journal</a></li>
-                <li><a href="#">Book Chapter</a></li>
-                <li><a href="#">Conference</a></li>
-                <li><a href="#">MOST</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="main-content sectionB col-11">
-        <div id="about" class="sectionB1 mb-2 col-9">
-            <h2 style="margin-left: 80px">網站建置中</h2>
+        <div id="wrapper" class="main-content sectionB col-11">
+            <div id="about" class="sectionB1 mb-2 col-9">
+                <h2 style="margin-left: 80px">網站建置中</h2>
+            </div>
         </div>
     </div>
 </body>
