--- a/Webtech/AS7/index.html
+++ b/Webtech/AS7/index.html
@@ -13,7 +13,7 @@
 
     <title>AS7</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-</script><script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/control.js"></script>
 
