--- a/Webtech/AS5/index.html
+++ b/Webtech/AS5/index.html
@@ -27,7 +27,8 @@
           window[namespace][packageName].push(data)
         }
       })()
-    </script><script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
+    </script>
+    <script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
 </body>
 
 </html>
