--- a/Webtech/AS7/index.html
+++ b/Webtech/AS7/index.html
@@ -13,9 +13,8 @@
 
     <title>AS7</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
-    <script src="./js/scroll.js"></script>
     <script src="./js/control.js"></script>
+
 
 </head>
 
@@ -75,7 +74,26 @@
             </div>
         </div>
     </div>
+    <script>
+         (function() {
+        var namespace = '__twreporterEmbeddedData'
+        var packageName = 'scrollable-image'
+        if (typeof window != 'undefined') {
+          if (!window[namespace]) { 
+            window[namespace] = {}
+          }
+          if (window[namespace] && !window[namespace][packageName]) { 
+            window[namespace][packageName] = [] 
+          }
+        }
+        if (Array.isArray(window[namespace][packageName])) {
+          var data = {"uuid":"eebd9bea-39d3-423f-8646-0d1a0252b843","lazyload":true,"data":["https:\u002F\u002Fi.imgur.com\u002Fu35EbBT.jpg","https:\u002F\u002Fi.imgur.com\u002FZDrlZnu.jpg","https:\u002F\u002Fi.imgur.com\u002Fty443KG.jpg","https:\u002F\u002Fi.imgur.com\u002FXkUkfCx.jpg","https:\u002F\u002Fi.imgur.com\u002FAInh2cj.jpg","https:\u002F\u002Fi.imgur.com\u002FK0oowYc.jpg","https:\u002F\u002Fi.imgur.com\u002Fl08O192.jpg","https:\u002F\u002Fi.imgur.com\u002F82y4avf.jpg","https:\u002F\u002Fi.imgur.com\u002F60IOLbg.jpg","https:\u002F\u002Fi.imgur.com\u002FEZBN0Kl.jpg"],"skipLoadLocationRegExp":"editor"}
+          window[namespace][packageName].push(data)
+        }
+      })()
 
+    </script>
+    <script type="text/javascript" src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
     
 
 
