--- a/Webtech/AS7/index.html
+++ b/Webtech/AS7/index.html
@@ -38,6 +38,39 @@
             <div>
                 <video id="video" src="../AS7/AS7_1920x1080.mp4"></video>
             </div>
+            <div id="showvideotext" class="hide" style="position:absolute; z-index:20; width:100vw;">
+                <div style="width:100vw; height:100vh; background:rgba(0, 0, 0, 0.1)"></div>
+                <div style="width:100vw; height:500vh; background-color: rgba(105, 146, 173, 0.2)">
+                    <div class="box">
+                        <h3 style="padding:5px">全台灣的河川約略可分為120個水系，而每個水系更是由不同大小的支流匯集而成</h3>
+                    </div>
+                </div>
+                <div style="width:100vw; height:400vh; background:rgba(0, 0, 0, 0.1)">
+                    <div class="box2">
+                        <h3 style="padding:5px">「我家門前有小河，後面有山坡」幾乎成為每個台灣人居住地的真實寫照</h3>
+                    </div>
+                </div>
+                <div style="width:100%; height:400vh; background:rgba(0, 0, 0, 0.1)">
+                    <div class="box2">
+                        <h3 style="padding:5px">然而，台灣從南到北的219條河川中，只有極少數的河川，可以合法進行水上遊憩活動，例如雙溪</h3>
+                    </div>
+                </div>
+                <div style="width:100%; height:350vh; background:rgba(0, 0, 0, 0.1)">
+                    <div class="box">
+                        <h3 style="padding:5px">全台灣的26個水庫，目前也僅有石門水庫，可以向管理機關「申請」航權，合法地下水划獨木舟</h3>
+                    </div>
+                </div>
+                <div style="width:100%; height:100vh; background:rgba(0, 0, 0, 0.1)">
+                    <div class="box">
+                        <h3 style="padding:5px">為什麼政府一方面鼓勵人民親近自然，卻又一方面對台灣的淡水水域充滿管制呢？</h3>
+                    </div>
+                </div>
+                <div style="width:100%; height:100vh; background:rgba(0, 0, 0, 0.1)">
+                    <div class="box">
+                        <h3 style="padding:5px">究竟台灣的淡水水域什麼時候才會走向開放？讓人民自主自由地決定要航向何方？</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script>
