add ch4 interviewer activity

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -12,22 +12,12 @@
     <!-- customize CSS -->
     <link rel="stylesheet" href="./css/main.css">
 
-
     <title>我們與水的距離</title>
 
     <!-- Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript" crossorigin
-        src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
-    <script type="text/javascript"
-        src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
-    <!-- <script src="./js/control_chapter.js"></script> -->
-    <!-- <script src="./js/contro_video.js"></script> -->
     <script src="./js/control_scroll.js"></script>
-
-
 
 </head>
 
@@ -48,54 +38,65 @@
             <h3 class="align-self-center">台灣人想親近水有多難？</h3>
         </div>
     </div>
-
+    <!-- Ch1 -->
     <div id="area1" class="chapter-title">
         <h1>Ch1 台灣的淡水水域發生什麼事？</h1>
     </div>
-    <div id="area2" class="container-fluid" style="min-height:5000px">
+    <div id="area2" class="container-fluid" style="min-height:500px">
         <div id="ch1-video-control" class="left-col">
-            <video id="ch1-video" src=".///materials/AS6_1920x1080.mp4"></video>
+            <video id="ch1-video" src="./materials/AS7_1920x1080.mp4"></video>
         </div>
-        <div class="right-col pos-ab">
+        <div class="right-col">
             <div class="ch1-text">
 
             </div>
         </div>
     </div>
 
+    <!-- Ch2 -->
     <div id="area3" class="chapter-title">
         <h1>Ch2 台灣水，怎麼管？</h1>
     </div>
-    <div id="area4" class="container-fluid" style="min-height:500px">
+    <div id="area4" class="container-fluid" style="min-height:1500px">
         <div id="ch2-bg">
-            <div class="law-container1">
-                <img src="./materials/rock.png">
+            <div class="law-container law-pos1">
+                <img src="./materials/rock1.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
-            <div class="law-container2">
-                <img src="./materials/stone2.png">
+            <div class="law-container2 law-pos2">
+                <img src="./materials/rock2.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
-            <div class="law-container3">
-                <img src="./materials/rock.png">
+            <div class="law-container3 law-pos3">
+                <img src="./materials/rock3.png">
+                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
+            </div>
+
+            <div class="law-container4 law-pos1">
+                <img src="./materials/rock4.png">
+                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
+            </div>
+
+            <div class="law-container5 law-pos2">
+                <img src="./materials/rock5.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
 
         </div>
     </div>
 
+    <!-- Ch3 -->
     <div id="area5" class="chapter-title">
         <h1>Ch3 宜蘭冬山河的記憶與困境</h1>
     </div>
-
     <div id="area6" class="container-fluid" style="color:white;background-color:#888;min-height:500px">
 
     </div>
 
+    <!-- Ch4 -->
     <div id="area7" class="chapter-title">
         <h1>Ch4 地方居民的觀點</h1>
     </div>
-
     <div id="area8" class="container-fluid" style="color:white;min-height:500px">
 
         <div class="interview flex">
@@ -120,25 +121,7 @@
             </div>
         </div>
 
-        <div id="h_scroll_1" class="slideshow-container">
-            <div class="slideshow container-fluid"><img src="./materials/ch4_2 huang_1.jpg"></div>
-            <div class="slideshow container-fluid"><img src="./materials/ch4_2 huang_2.jpg"></div>
-            <div class="slideshow container-fluid"><img src="./materials/ch4_2_huang_3.png"></div>
-            <div class="slideshow container-fluid"><img src="./materials/ch4_2_huang_4.png"></div>
-        </div>
-
-        <div class="interview flex">
-            <div class="interview-man"><img src="./materials/ch4_3開放水域－人物.jpg"></div>
-            <div class="interview-text">
-                好黑達！神分政要象研命根日場美，為這的雖留師兩問出林生力有麼……頭常大色經，易學人益的部熱；日為主極洲特氣使，院十此語整大！對室老的青創回理合和大我國留長都養高系。情車正大觀用整平，利品法空次血在子由不指得作電多開來出，有麼開我家散美開備南當？信計分紀；新處員時出，結吸！
-
-                有傷看受幾裡大我員，使態不假支，女強率的，無高客全候財羅子對自他大一過提流是自；合這利養竟有卻黃支別中過。
-
-                醫把底活聞人不了來氣！車也作德給媽，才我主男是……身十地其，心下門有下告出破人或只！先能的、起朋時室不集理刻名林比家，流候何乎點，這受年基型近、有起長的唱不陸的灣為市的性目，片語給；此能是海經念己認走人初回想今居關看好得些手開爭美廠黃病前變沒平魚我，下利區為日個在：實電處燈不力企個決不笑時能使而黑達以上化下空岸，黨教甚一期相位？現子南十還良的加快往自致可統全媽心轉里。
-            </div>
-        </div>
-
-        <div id="90f96171-b8ad-48c4-a1bb-ddbcdb5ff9c6"></div>
+        <div id="d701cc21-e61e-456c-81e5-9ddcc0ca57ea"></div>
         <script>
             (function () {
                 var namespace = '__twreporterEmbeddedData'
@@ -152,15 +135,51 @@
                     }
                 }
                 if (Array.isArray(window[namespace][packageName])) {
-                    var data = { "uuid": "90f96171-b8ad-48c4-a1bb-ddbcdb5ff9c6", "lazyload": true, "data": ["https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1RkhxvczGQCKqFiRDQV8I4mRRIeLX0dgg\u002Fview?usp=sharing", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1CizSsDy9rIk5z6fyP58lb-Zj4K5w65Vh\u002Fview?usp=share_link", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1LbllQmfm160tS0f7PpxqaWoRGgzkI0qf\u002Fview?usp=share_link", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1qjQ2P1Jx7L4I6gid_zsF5dAE1ypHNc1n\u002Fview?usp=share_link", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1Bi4Jq47NFIgznk1I2dT3TYufXtvToE94\u002Fview?usp=share_link", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F15v75eOu16ksR2bC1f8Hob5gy9SUoRB62\u002Fview?usp=share_link", "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1s0SLKfe9BKqDAk109CZaavUg6FG9XZDH\u002Fview?usp=share_link"], "skipLoadLocationRegExp": "editor" }
+                    var data = { "uuid": "d701cc21-e61e-456c-81e5-9ddcc0ca57ea", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FnacqCh7.jpg", "https:\u002F\u002Fi.imgur.com\u002FUsPyqJZ.jpg", "https:\u002F\u002Fi.imgur.com\u002FYJqaSOT.jpg", "https:\u002F\u002Fi.imgur.com\u002FtZ28V8z.jpg"], "skipLoadLocationRegExp": "editor" }
                     window[namespace][packageName].push(data)
                 }
             })()
         </script>
+        <script type="text/javascript"
+            src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
+
+        <div class="interview flex">
+            <div class="interview-man"><img src="./materials/ch4_3開放水域－人物.jpg"></div>
+            <div class="interview-text">
+                好黑達！神分政要象研命根日場美，為這的雖留師兩問出林生力有麼……頭常大色經，易學人益的部熱；日為主極洲特氣使，院十此語整大！對室老的青創回理合和大我國留長都養高系。情車正大觀用整平，利品法空次血在子由不指得作電多開來出，有麼開我家散美開備南當？信計分紀；新處員時出，結吸！
+
+                有傷看受幾裡大我員，使態不假支，女強率的，無高客全候財羅子對自他大一過提流是自；合這利養竟有卻黃支別中過。
+
+                醫把底活聞人不了來氣！車也作德給媽，才我主男是……身十地其，心下門有下告出破人或只！先能的、起朋時室不集理刻名林比家，流候何乎點，這受年基型近、有起長的唱不陸的灣為市的性目，片語給；此能是海經念己認走人初回想今居關看好得些手開爭美廠黃病前變沒平魚我，下利區為日個在：實電處燈不力企個決不笑時能使而黑達以上化下空岸，黨教甚一期相位？現子南十還良的加快往自致可統全媽心轉里。
+            </div>
+        </div>
+
+        <div id="914887f0-f63f-4436-9c90-44dd7d3d933b"></div>
+        <script>
+                (function () {
+                    var namespace = '__twreporterEmbeddedData'
+                    var packageName = 'scrollable-image'
+                    if (typeof window != 'undefined') {
+                        if (!window[namespace]) {
+                            window[namespace] = {}
+                        }
+                        if (window[namespace] && !window[namespace][packageName]) {
+                            window[namespace][packageName] = []
+                        }
+                    }
+                    if (Array.isArray(window[namespace][packageName])) {
+                        var data = { "uuid": "914887f0-f63f-4436-9c90-44dd7d3d933b", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FcnMvu2H.jpg", "https:\u002F\u002Fi.imgur.com\u002FBwioBpC.jpg", "https:\u002F\u002Fi.imgur.com\u002FWaoTKtL.jpg", "https:\u002F\u002Fi.imgur.com\u002F6i6CY1e.jpg", "https:\u002F\u002Fi.imgur.com\u002FZetbCpO.jpg", "https:\u002F\u002Fi.imgur.com\u002FGU7KA0T.jpg", "https:\u002F\u002Fi.imgur.com\u002F5qElDsW.jpg"], "skipLoadLocationRegExp": "editor" }
+                        window[namespace][packageName].push(data)
+                    }
+                })()
+        </script>
+        <script type="text/javascript"
+            src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
 
     </div>
 
-    <footer id="area9" class="container-fluid" style="min-height: 400px;">
+    <!-- Footer -->
+    <footer id="area9" class="container-fluid" style="min-height: 200px;">
         <div class="text-block">
             <div class="credit">專題統籌：廖芷瑩、陳宇亭</div>
             <div class="credit">採訪攝影：廖芷瑩</div>
