add ch1 video & control
region1, 2, 3, 9 to fix

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/control_scroll.js"></script>
+    <script src="./js/control_ch1_video.js"></script>
 
 </head>
 
@@ -44,12 +45,10 @@
     </div>
     <div id="area2" class="container-fluid" style="min-height:500px">
         <div id="ch1-video-control" class="left-col">
-            <video id="ch1-video" src="./materials/AS7_1920x1080.mp4"></video>
+            <video id="ch1-video" src="./materials/ch1_video.mp4"></video>
         </div>
-        <div class="right-col">
-            <div class="ch1-text">
+        <div id="ch1-supplement" class="right-col">
 
-            </div>
         </div>
     </div>
 
@@ -63,21 +62,21 @@
                 <img src="./materials/rock1.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
-            <div class="law-container2 law-pos2">
+            <div class="law-container law-pos2">
                 <img src="./materials/rock2.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
-            <div class="law-container3 law-pos3">
+            <div class="law-container law-pos3">
                 <img src="./materials/rock3.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
 
-            <div class="law-container4 law-pos1">
+            <div class="law-container law-pos1">
                 <img src="./materials/rock4.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
 
-            <div class="law-container5 law-pos2">
+            <div class="law-container law-pos2">
                 <img src="./materials/rock5.png">
                 <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
             </div>
@@ -154,7 +153,7 @@
             </div>
         </div>
 
-        <div id="914887f0-f63f-4436-9c90-44dd7d3d933b"></div>
+        <div class="slides" id="914887f0-f63f-4436-9c90-44dd7d3d933b"></div>
         <script>
                 (function () {
                     var namespace = '__twreporterEmbeddedData'
