modify ch1 & ch2
fix ch1 right-col
replace ch1 video & partial photos
modify ch2 content

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -45,10 +45,14 @@
     </div>
     <div id="area2" class="container-fluid" style="min-height:500px">
         <div id="ch1-video-control" class="left-col">
-            <video id="ch1-video" src="./materials/ch1_video.mp4"></video>
+            <video id="ch1-video" src="./materials/ch1_video2.mp4"></video>
         </div>
         <div id="ch1-supplement" class="right-col">
-
+            <h3>這裡是古亭河濱公園旁的新店溪</h3>
+            <img src="./materials/1-1 河濱公園.jpg">
+            <div class="ch1-text">
+                根據公告，此處從上午六時至下午六時皆全面禁止水上遊憩活動
+            </div>
         </div>
     </div>
 
@@ -56,29 +60,29 @@
     <div id="area3" class="chapter-title">
         <h1>Ch2 台灣水，怎麼管？</h1>
     </div>
-    <div id="area4" class="container-fluid" style="min-height:1500px">
+    <div id="area4" class="container-fluid">
         <div id="ch2-bg">
-            <div class="law-container law-pos1">
-                <img src="./materials/rock1.png">
-                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
-            </div>
-            <div class="law-container law-pos2">
-                <img src="./materials/rock2.png">
-                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
-            </div>
-            <div class="law-container law-pos3">
+            <div class="law-container rocksize1 law-pos1">
                 <img src="./materials/rock3.png">
-                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
+                <div class="law-text">2016《水域遊憩管理辦法》第5條第1項及第2項：水域遊憩活動管理機關依本條例第三十六條規定限制水域遊憩活動之種類、範圍、時間及行為時，應公告之。前項水域遊憩活動之種類、範圍、時間及土地使用，涉及其他機關權責範圍者，應協調該權責單位同意後辦理。</div>
             </div>
-
-            <div class="law-container law-pos1">
+            <div class="law-container rocksize1 law-pos2">
+                <img src="./materials/rock3.png">
+                <div class="law-text">2016《水域遊憩管理辦法》第6條：水域遊憩活動管理機關得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域。</div>
+            </div>
+            <div class="law-container rocksize2 law-pos3">
                 <img src="./materials/rock4.png">
-                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
+                <div class="law-text">2019《發展觀光條例》第36條第1項：為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域；其禁止、限制及應遵守事項之管理辦法，由主管機關會商有關機關定之。</div>
             </div>
 
-            <div class="law-container law-pos2">
-                <img src="./materials/rock5.png">
-                <div class="law-text">為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域</div>
+            <div class="law-container rocksize2 law-pos4">
+                <img src="./materials/rock4.png">
+                <div class="law-text">2019《發展觀光條例》第60條第1項：於公告禁止區域從事水域遊憩活動或不遵守水域遊憩活動管理機關對有關水域遊憩活動所為種類、範圍、時間及行為之限制命令者，由其水域遊憩活動管理機關處新臺幣一萬元以上五萬元以下罰鍰，並禁止其活動。</div>
+            </div>
+
+            <div class="law-container rocksize3 law-pos5">
+                <img src="./materials/rock2.png">
+                <div class="law-text">2009～2021各縣市政府《公園管理自治條例》：在公園裡不得在水池或湖泊內游泳、沐浴、洗滌、網魚、釣魚、銼魚、放生、划船或其他污染毒害水質及傷害動植物之行為。但經主管機關公告在指定地點得划船、釣魚者，不在此限。</div>
             </div>
 
         </div>
