--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -47,7 +47,7 @@
         <div id="ch1-video-control" class="left-col">
             <video id="ch1-video" src="./materials/ch1_video2.mp4"></video>
         </div>
-        <div id="ch1-supplement" class="right-col">
+        <div id="ch1-supplement" class="right-col hide">
             <h3>這裡是古亭河濱公園旁的新店溪</h3>
             <img src="./materials/1-1 河濱公園.jpg">
             <div class="ch1-text">
