add trans & ch3
todo: ch2 bug

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- customize CSS -->
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/chapter.css">
 
     <title>我們與水的距離</title>
 
@@ -39,9 +40,43 @@
             <h3 class="align-self-center">台灣人想親近水有多難？</h3>
         </div>
     </div>
+    <div id="article-intro">
+        <div class="pt15">
+            <div class="sticky-js">這是台灣的河川</div>
+        </div>
+        <div class="pt15">
+            <div class="sticky-js">河川是我們生活的好夥伴</div>
+            <div class="sticky-js">過往</div>
+            <div class="sticky-js">住河岸的人</div>
+            <div class="sticky-js">靠著水討生活</div>
+            <div class="sticky-js">依水而生的人們也在上面學習游泳、玩樂與遊憩</div>
+            <div class="sticky-js">到了現在</div>
+            <div class="sticky-js">我們與水的關係</div>
+            <div class="sticky-js">卻只變成了排放污水的地方</div>
+        </div>
+        <div class="pt15">
+            <div class="sticky-js">不只是河川</div>
+            <div class="sticky-js">還有公園的湖泊</div>
+            <div class="sticky-js">遊憩區的水庫</div>
+        </div>
+        <div class="pt15">
+            <div class="sticky-js">台灣人民到底與水的距離有多遠？</div>
+        </div>
+    </div>
+
     <!-- Ch1 -->
-    <div id="area1" class="chapter-title">
-        <h1>Ch1 台灣的淡水水域發生什麼事？</h1>
+    <div id="area1" class="chapter-title-container">
+        <div class="chapter-title">
+            <h1>Chapter 1</h1>
+            <h1>台灣的淡水水域發生什麼事？</h1>
+        </div>
+    </div>
+    <div class="trans">
+        <div class="trans-text">台灣各地的水域開放情形不一，但大多數的區域，依然是禁止為優先，開放為例外。<br>
+            只有少部分區域（像是高雄愛河，或台北新店溪）可以在特定時間下水進行遊憩活動。<br>
+            其他地方就算開放了，也大多為開放給特定業者或經營單位。<br>
+            民眾如果想要下水，大多得付費或經過冗長的申請過程，並且不一定會通過。
+        </div>
     </div>
     <div id="area2" class="container-fluid" style="min-height:500px">
         <div id="ch1-video-control" class="left-col">
@@ -57,91 +92,168 @@
     </div>
 
     <!-- Ch2 -->
-    <div id="area3" class="chapter-title">
-        <h1>Ch2 台灣水，怎麼管？</h1>
+    <div id="area3" class="chapter-title-container">
+        <div class="chapter-title">
+            <h1>Chapter 2</h1>
+            <h1>台灣水，怎麼管？</h1>
+        </div>
+    </div>
+    <div id="ch2-intro" class="trans">
+        <div class="trans-text">
+            那台灣的法律，到底怎麼管理人民下水這件事情呢？<br>
+            我們和河流與水域之間，有哪些距離呢？<br>
+        </div>
     </div>
     <div id="area4" class="container-fluid">
         <div id="ch2-bg">
             <div class="law-container rocksize1 law-pos1">
                 <img src="./materials/rock3.png">
-                <div class="law-text">2016《水域遊憩管理辦法》第5條第1項及第2項：水域遊憩活動管理機關依本條例第三十六條規定限制水域遊憩活動之種類、範圍、時間及行為時，應公告之。前項水域遊憩活動之種類、範圍、時間及土地使用，涉及其他機關權責範圍者，應協調該權責單位同意後辦理。</div>
+                <div class="law-text">
+                    2016《水域遊憩管理辦法》第5條第1項及第2項：水域遊憩活動管理機關依本條例第三十六條規定限制水域遊憩活動之種類、範圍、時間及行為時，應公告之。前項水域遊憩活動之種類、範圍、時間及土地使用，涉及其他機關權責範圍者，應協調該權責單位同意後辦理。
+                </div>
             </div>
-            <div class="law-container rocksize1 law-pos2">
+            <div class="law-container rocksize1 law-pos2 hide">
                 <img src="./materials/rock3.png">
                 <div class="law-text">2016《水域遊憩管理辦法》第6條：水域遊憩活動管理機關得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域。</div>
             </div>
-            <div class="law-container rocksize2 law-pos3">
+            <div class="law-container rocksize2 law-pos3 hide">
                 <img src="./materials/rock4.png">
-                <div class="law-text">2019《發展觀光條例》第36條第1項：為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域；其禁止、限制及應遵守事項之管理辦法，由主管機關會商有關機關定之。</div>
+                <div class="law-text">
+                    2019《發展觀光條例》第36條第1項：為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域；其禁止、限制及應遵守事項之管理辦法，由主管機關會商有關機關定之。
+                </div>
             </div>
 
-            <div class="law-container rocksize2 law-pos4">
+            <div class="law-container rocksize2 law-pos4 hide">
                 <img src="./materials/rock4.png">
-                <div class="law-text">2019《發展觀光條例》第60條第1項：於公告禁止區域從事水域遊憩活動或不遵守水域遊憩活動管理機關對有關水域遊憩活動所為種類、範圍、時間及行為之限制命令者，由其水域遊憩活動管理機關處新臺幣一萬元以上五萬元以下罰鍰，並禁止其活動。</div>
+                <div class="law-text">
+                    2019《發展觀光條例》第60條第1項：於公告禁止區域從事水域遊憩活動或不遵守水域遊憩活動管理機關對有關水域遊憩活動所為種類、範圍、時間及行為之限制命令者，由其水域遊憩活動管理機關處新臺幣一萬元以上五萬元以下罰鍰，並禁止其活動。
+                </div>
             </div>
 
-            <div class="law-container rocksize3 law-pos5">
+            <div class="law-container rocksize3 law-pos5 hide">
                 <img src="./materials/rock2.png">
-                <div class="law-text">2009～2021各縣市政府《公園管理自治條例》：在公園裡不得在水池或湖泊內游泳、沐浴、洗滌、網魚、釣魚、銼魚、放生、划船或其他污染毒害水質及傷害動植物之行為。但經主管機關公告在指定地點得划船、釣魚者，不在此限。</div>
+                <div class="law-text">
+                    2009～2021各縣市政府《公園管理自治條例》：在公園裡不得在水池或湖泊內游泳、沐浴、洗滌、網魚、釣魚、銼魚、放生、划船或其他污染毒害水質及傷害動植物之行為。但經主管機關公告在指定地點得划船、釣魚者，不在此限。
+                </div>
             </div>
 
         </div>
     </div>
+    <div class="trans">
+        <div class="trans-text">
+            以上三種法律，是縣市政府最常拿出來，告知民眾不得下水的法源依據。<br>
+            尤其是《發展觀光條例》第5條，及《水域遊憩管理辦法》第36條，是民眾最常被罰款的原因。<br>
+            在這兩條法律中明定，出於安全理由，縣市政府可禁止人民下水，並處以罰鍰。
+        </div>
+    </div>
 
     <!-- Ch3 -->
-    <div id="area5" class="chapter-title">
-        <h1>Ch3 宜蘭冬山河的記憶與困境</h1>
+    <div id="area5" class="chapter-title-container">
+        <div class="chapter-title">
+            <h1>Chapter 3</h1>
+            <h1>宜蘭冬山河的記憶與困境</h1>
+        </div>
     </div>
     <div id="area6" class="container-fluid" style="color:white;background-color:#888;min-height:500px">
+        <script>
+            (function () {
+                var namespace = '__twreporterEmbeddedData';
+                var pkg = 'scrollable-video';
+                if (typeof window != 'undefined') {
+                    if (!window.hasOwnProperty(namespace)) {
+                        window[namespace] = {};
+                    }
+                    if (window[namespace] && !window[namespace].hasOwnProperty(pkg)) {
+                        window[namespace][pkg] = [];
+                    }
+                    if (Array.isArray(window[namespace][pkg])) {
+                        var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1zSs8fzqvs8Vsi4hi9I8noSvlX7D5TP5v\u002Fview?usp=sharing", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是宜蘭縣，", "time": 1 }, { "text": "一個由水組成的三角洲平原。", "time": 3 }, { "text": "每年下雨超過200天，\n年平均降雨量超過2700mm，\n比起全台平均約只有1800mm，\n居民的生活與水緊密相連。", "time": 5 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "366afa90-bbb8-4ae5-8fc9-0ef468478ec0" };
+                        window[namespace][pkg].push(data);
+                    }
+                }
+            })()
+        </script>
+        <div id="366afa90-bbb8-4ae5-8fc9-0ef468478ec0"></div>
+
+        <script type="text/javascript" crossorigin
+            src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
+
+        <script>
+                (function () {
+                    var namespace = '__twreporterEmbeddedData';
+                    var pkg = 'scrollable-video';
+                    if (typeof window != 'undefined') {
+                        if (!window.hasOwnProperty(namespace)) {
+                            window[namespace] = {};
+                        }
+                        if (window[namespace] && !window[namespace].hasOwnProperty(pkg)) {
+                            window[namespace][pkg] = [];
+                        }
+                        if (Array.isArray(window[namespace][pkg])) {
+                            var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1AqxELb72urc2BEsgOQWjKspohxcBLtxH\u002Fview?usp=sharing", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是冬山河，", "time": 1 }, { "text": "宜蘭的第五大河流。", "time": 3 }, { "text": "發源於約1000公尺的新寮山，\n並在丸山、太和附近注入蘭陽平原。\n與舊時噶瑪蘭人的居住領域息息相關。", "time": 5 }, { "text": "它坡度落差大，攜帶大量泥沙，\n因此下游的冬山利澤等地區經常氾濫。", "time": 7 }, { "text": "民國63年，遭受「范迪」及「瓊絲」颱風的影響，\n冬山河不僅氾濫，更危及農業發展。\n宜蘭縣政府奉命進行整治工作。", "time": 10 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "26f51b92-23d6-4854-860c-f456305a00bb" };
+                            window[namespace][pkg].push(data);
+                        }
+                    }
+                })()
+        </script>
+        <div id="26f51b92-23d6-4854-860c-f456305a00bb"></div>
+
+        <script type="text/javascript" crossorigin
+            src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
 
     </div>
 
     <!-- Ch4 -->
-    <div id="area7" class="chapter-title">
-        <h1>Ch4 地方居民的觀點</h1>
+    <div id="area7" class="chapter-title-container">
+        <div class="chapter-title">
+            <h1>Chapter 4</h1>
+            <h1>地方居民的觀點</h1>
+        </div>
     </div>
     <div id="area8" class="container-fluid" style="color:white;min-height:500px">
 
         <div class="interview flex">
             <div class="interview-man"><img src="./materials/ch4_1 huang.jpg"></div>
             <div class="interview-text">
-                300字：好黑達！神分政要象研命根日場美，為這的雖留師兩問出林生力有麼……頭常大色經，易學人益的部熱；日為主極洲特氣使，院十此語整大！對室老的青創回理合和大我國留長都養高系。情車正大觀用整平，利品法空次血在子由不指得作電多開來出，有麼開我家散美開備南當？信計分紀；新處員時出，結吸！
-
-                有傷看受幾裡大我員，使態不假支，女強率的，無高客全候財羅子對自他大一過提流是自；合這利養竟有卻黃支別中過。
-
-                醫把底活聞人不了來氣！車也作德給媽，才我主男是……身十地其，心下門有下告出破人或只！先能的、起朋時室不集理刻名林比家，流候何乎點，這受年基型近、有起長的唱不陸的灣為市的性目，片語給；此能是海經念己認走人初回想今居關看好得些手開爭美廠黃病前變沒平魚我，下利區為日個在：實電處燈不力企個決不笑時能使而黑達以上化下空岸，黨教甚一期相位？現子南十還良的加快往自致可統全媽心轉里。
+                <h3>冬山居民 黃志雄</h3>
+                <span>
+                    黃志雄居住在冬山超過四十年，是一個熱愛自然的植物採集者。他回憶自己小時候，總是在充滿水的地方，和朋友遊玩，但逐漸長大後，忘記什麼時候開始，自己和水越來越遠。
+                    在訪談中，他逐漸想起以前冬山尚未整治河水以前、水漫土地的樣子，雖然水整治好後，土地不再淹水，變得可以耕作與利用，但同時他也提起，自己支持我們都應該親近水源，他也希望他的孩子，可以在冬山河學會游泳。
+                </span>
             </div>
         </div>
 
         <div class="interview flex">
             <div class="interview-man"><img src="./materials/ch4_1 huang &.jpg"></div>
             <div class="interview-text">
-                300字：好黑達！神分政要象研命根日場美，為這的雖留師兩問出林生力有麼……頭常大色經，易學人益的部熱；日為主極洲特氣使，院十此語整大！對室老的青創回理合和大我國留長都養高系。情車正大觀用整平，利品法空次血在子由不指得作電多開來出，有麼開我家散美開備南當？信計分紀；新處員時出，結吸！
+                <h3>五結鄉利澤簡在地青年黃兵善與冬山青年紀詩楷</h3>
+                <span>
+                    黃兵善是2022年五結鄉的利澤村長候選人之一，也是在地團隊「延長線」的創辦人。他出來參選的原因，是希望利澤可以變成適合大家居住的地方。過去幾年，他回鄉後，推動在地水文化的社會教育。近期他更拍了紀錄片《Kebalan的舢舨少年》紀錄利澤簡當地人與水的關係。
 
-                有傷看受幾裡大我員，使態不假支，女強率的，無高客全候財羅子對自他大一過提流是自；合這利養竟有卻黃支別中過。
-
-                醫把底活聞人不了來氣！車也作德給媽，才我主男是……身十地其，心下門有下告出破人或只！先能的、起朋時室不集理刻名林比家，流候何乎點，這受年基型近、有起長的唱不陸的灣為市的性目，片語給；此能是海經念己認走人初回想今居關看好得些手開爭美廠黃病前變沒平魚我，下利區為日個在：實電處燈不力企個決不笑時能使而黑達以上化下空岸，黨教甚一期相位？現子南十還良的加快往自致可統全媽心轉里。
+                    2021年，他更與冬山青年紀詩楷，一起合辦「小河舢舨造舟體驗營」，希望藉由教導民眾造舟，認識流過冬山老街與利澤老街的冬山河文化。
+                    他們希望，冬山河沿岸的人民，可以再次乘著自己的舟下水，讓水文化回到生活裡，和噶瑪蘭的水一起成長。
+                </span>
             </div>
         </div>
 
         <div id="d701cc21-e61e-456c-81e5-9ddcc0ca57ea"></div>
         <script>
-            (function () {
-                var namespace = '__twreporterEmbeddedData'
-                var packageName = 'scrollable-image'
-                if (typeof window != 'undefined') {
-                    if (!window[namespace]) {
-                        window[namespace] = {}
+                (function () {
+                    var namespace = '__twreporterEmbeddedData'
+                    var packageName = 'scrollable-image'
+                    if (typeof window != 'undefined') {
+                        if (!window[namespace]) {
+                            window[namespace] = {}
+                        }
+                        if (window[namespace] && !window[namespace][packageName]) {
+                            window[namespace][packageName] = []
+                        }
                     }
-                    if (window[namespace] && !window[namespace][packageName]) {
-                        window[namespace][packageName] = []
+                    if (Array.isArray(window[namespace][packageName])) {
+                        var data = { "uuid": "d701cc21-e61e-456c-81e5-9ddcc0ca57ea", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FnacqCh7.jpg", "https:\u002F\u002Fi.imgur.com\u002FUsPyqJZ.jpg", "https:\u002F\u002Fi.imgur.com\u002FYJqaSOT.jpg", "https:\u002F\u002Fi.imgur.com\u002FtZ28V8z.jpg"], "skipLoadLocationRegExp": "editor" }
+                        window[namespace][packageName].push(data)
                     }
-                }
-                if (Array.isArray(window[namespace][packageName])) {
-                    var data = { "uuid": "d701cc21-e61e-456c-81e5-9ddcc0ca57ea", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FnacqCh7.jpg", "https:\u002F\u002Fi.imgur.com\u002FUsPyqJZ.jpg", "https:\u002F\u002Fi.imgur.com\u002FYJqaSOT.jpg", "https:\u002F\u002Fi.imgur.com\u002FtZ28V8z.jpg"], "skipLoadLocationRegExp": "editor" }
-                    window[namespace][packageName].push(data)
-                }
-            })()
+                })()
         </script>
         <script type="text/javascript"
             src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
@@ -149,11 +261,12 @@
         <div class="interview flex">
             <div class="interview-man"><img src="./materials/ch4_3開放水域－人物.jpg"></div>
             <div class="interview-text">
-                好黑達！神分政要象研命根日場美，為這的雖留師兩問出林生力有麼……頭常大色經，易學人益的部熱；日為主極洲特氣使，院十此語整大！對室老的青創回理合和大我國留長都養高系。情車正大觀用整平，利品法空次血在子由不指得作電多開來出，有麼開我家散美開備南當？信計分紀；新處員時出，結吸！
-
-                有傷看受幾裡大我員，使態不假支，女強率的，無高客全候財羅子對自他大一過提流是自；合這利養竟有卻黃支別中過。
-
-                醫把底活聞人不了來氣！車也作德給媽，才我主男是……身十地其，心下門有下告出破人或只！先能的、起朋時室不集理刻名林比家，流候何乎點，這受年基型近、有起長的唱不陸的灣為市的性目，片語給；此能是海經念己認走人初回想今居關看好得些手開爭美廠黃病前變沒平魚我，下利區為日個在：實電處燈不力企個決不笑時能使而黑達以上化下空岸，黨教甚一期相位？現子南十還良的加快往自致可統全媽心轉里。
+                <h3>開放水域聯盟</h3>
+                <span>
+                    開放水域聯盟是一群由熱愛水上活動的人所組成的團隊的倡議團隊，希望藉由倡議和非暴力的抗爭，可以打破台灣「水域解嚴」的高牆。他們在2022年，一共來冬山河四次，包括宜蘭綠色博覽會的開幕，都能見到他們高舉布條抗議的身影。
+                    在他們的觀察及研究裡，冬山河的水域非常平穩，包括一些舊河道路線，也很適合民眾下水，但目前縣政府卻只有開放特定業者經營水上動力船，卻不願意讓民眾下水划無動力SUP，這讓他們覺得很奇怪。
+                    聯盟裡頭有當地學生國手訓練隊的教練，也有學生家長，及激流獨木舟教練，更有長期帶人到山間體驗水上活動的經營者。他們長期接觸台灣的水，認為台灣人值得更好的水文化及水體驗教育，而不是從小被教導河川湖泊是危險的地方，不應該靠近。
+                </span>
             </div>
         </div>
 
